修复http请求错误处理 添加windows平台编译版本 添加config到release中
Signed-off-by: FZxiao233 <fzxiao@outlook.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,17 +4,18 @@ before:
   hooks:
     - go mod download
 builds:
-  - env:
-      - CGO_ENABLED=0
-  - goos:
-      - darwin
-      - windows
-      - linux
-  - goarch:
-      - amd64
-      - arm64
-  - goarm:
-      - 7
+  - main:
+      env:
+        - CGO_ENABLED=0
+      goos:
+        - darwin
+        - windows
+        - linux
+      goarch:
+        - amd64
+        - arm64
+      goarm:
+        - 7
 archives:
   - replacements:
       darwin: Macos
