fix: config_example error that causing crash (newTicker time must greater than 0)

--- a/config_example.json
+++ b/config_example.json
@@ -2,7 +2,8 @@
   "EnableProxy": false,
   "Proxy": "127.0.0.1:10800",
   "RedisHost": "127.0.0.1:6379",
-  "CheckSec": 30,
+  "CriticalCheckSec": 30,
+  "NormalCheckSec": 30,
   "ExpressPort": 3000,
   "DownloadQuality": "best",
   "DownloadDir": "",
