--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,13 +2,13 @@
 # Make sure to check the documentation at http://goreleaser.com
 before:
   hooks:
-    - go mod download
+    #- go mod download
 builds:
   - env:
       - CGO_ENABLED=0
     goos:
-      - darwin
-      - windows
+      #- darwin
+      #- windows
       - linux
     goarch:
       - amd64
