--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,8 +7,8 @@ builds:
   - env:
       - CGO_ENABLED=0
     goos:
-      #- darwin
-      #- windows
+      - darwin
+      - windows
       - linux
     goarch:
       - amd64
